--- a/sites/all/themes/tchair_ohm/sass/partials/_components.scss
+++ b/sites/all/themes/tchair_ohm/sass/partials/_components.scss
@@ -19,6 +19,9 @@
 // Menus
 @import "components/menus/breadcrumb";
 @import "components/menus/action-links";
+@import "components/menus/nav-menu";
+@import "components/menus/main-menu";
+@import "components/menus/user-menu";
 // Blocks
 @import "components/blocks/nav-bar";
 // Comments
